@@ -7,14 +7,17 @@ Interface to Vampire as an SMT prover.
 
 signature VAMPIRE_INTERFACE =
 sig
-  val smtlib_vampireC: SMT_Util.class
+  val smtlib_vampire_dtC: SMT_Util.class
+  val smtlib_vampire_nodtC: SMT_Util.class
 end;
 
 structure Vampire_Interface : VAMPIRE_INTERFACE =
 struct
 
-val vampireC = ["vampire"]
-val smtlib_vampireC = SMTLIB_Interface.smtlibC @ vampireC
+val vampire_dtC = ["vampire_dt"]
+val vampire_nodtC = ["vampire_nodt"]
+val smtlib_vampire_dtC = SMTLIB_Interface.smtlibC @ vampire_dtC
+val smtlib_vampire_nodtC = SMTLIB_Interface.smtlibC @ vampire_nodtC
 
 fun sctrarg (sel, typ) = "(" ^ sel ^ " " ^ typ ^ ")"
 fun sctr (name, args) = enclose "(" ")" (implode_space (name :: map sctrarg args))
@@ -29,15 +32,16 @@ fun sdtyp ((fp, dtyps : SMTLIB_Interface.dtype_decls)) =
 (* interface *)
 
 local
-  fun translate_config ctxt : SMT_Translate.config =
+  fun translate_config fp_kinds (_ : Proof.context) : SMT_Translate.config =
     {order = SMT_Util.First_Order,
      logic = K (K ""),
-     fp_kinds = [BNF_Util.Least_FP],
+     fp_kinds = fp_kinds,
      serialize = SMTLIB_Interface.serialize sdtyp}
 in
 
 val _ = Theory.setup (Context.theory_map
-  (SMT_Translate.add_config (smtlib_vampireC, translate_config)))
+  (SMT_Translate.add_config (smtlib_vampire_dtC, translate_config [BNF_Util.Least_FP]) #>
+   SMT_Translate.add_config (smtlib_vampire_nodtC, translate_config [])))
 
 end
 
